--- a/container/Cargo.toml
+++ b/container/Cargo.toml
@@ -12,7 +12,7 @@ name = "configure"
 path = "src/configure/main.rs"
 
 [dependencies]
-failure = "0.1"
+anyhow = "1.0"
 log = "0.4"
 structopt = "0.3"
 serde = { version = "1.0", features = ["derive"]}
